# template_mipt

./: .gitignore  CMakeLists.txt  README.md
template_mipt/: variant.hpp
tests/: CMakeLists.txt  variant_tests.cpp
